<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/parametro1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parametro1"
            android:inputType="number"
            android:paddingTop="20dp"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/parametro2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parametro2"
            android:inputType="number"
            android:paddingTop="20dp"/>
    </android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/parametro3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/parametro3"
        android:inputType="number"
        android:paddingTop="20dp"/>

</android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Actualizar parametros"
            android:onClick="actualizarParametros" />

    </LinearLayout>


</LinearLayout>